src/app/styles/common.scss
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: calc(100vw / 1440);

    @media (width <= $breakpoint-mob) {
      font-size: calc(100vw / 360);
    }
}

body {
  height: 100%;
  color: var(--black);
  font-size: 16rem;
  font-family: var(--font-family-primary);
  backface-visibility: hidden;
  -webkit-font-smoothing: antialiased;
  text-size-adjust: 100%;
  text-rendering: geometricprecision;
}

.root{
  padding: 0 0 132rem;
}

main{
  position: relative;
  z-index: 1;
  background-color: var(--white);
}

.blue{
  color: var(--primary-color);
}

